# Newsletter-Agent

./: .env.example  .gitignore  AboutMe.example.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.claude/: settings.json
scripts/: compare_sources.py  test_deep_search.py  test_llm_classification.py
src/newsletter_agent/: __init__.py  cli.py  config.py  cost_tracker.py  models.py  pipeline.py  report.py  scanner.py  scheduling.py  utils.py  validation.py
src/newsletter_agent/delivery/: email.py  templates.py
src/newsletter_agent/ranking/: filter.py  prompts.py  ranker.py
src/newsletter_agent/search/: __init__.py  classifier.py  engine.py  layer_exa.py  layer_perplexity.py  layer_tavily.py  merger.py  models.py  query_generator.py
src/newsletter_agent/sources/: __init__.py  arxiv.py  base.py  conferences.py  github_trending.py  hackernews.py  hackerone.py  oss_security.py  reddit.py  rss.py  web.py
src/newsletter_agent/state/: store.py
tests/: test_cost_tracker.py  test_filter.py  test_jina_extraction.py  test_semantic_dedup.py  test_tavily_scanner.py
tests/search/: test_classifier.py  test_engine.py  test_layer_exa.py  test_layer_perplexity.py  test_layer_tavily.py  test_merger.py  test_query_generator.py
